@@ -1,5 +1,6 @@
 #include <R_ext/Utils.h>
 #include "interval.h"
+#include "nodeGroup.h"
 #include "reader.h"
 #include "croi_func.h"
 
@@ -8,34 +9,44 @@ Croi::Croi(void) {
   iv = new bode::Interval();
 }
 
-int Croi::load(const char *filename,int insertLength,int ftype) {
+void Croi::open(const char *filename,int insertLength,int ftype) {
+  rdr = bode::Reader::open(filename,ftype);
+  iLength = insertLength;
+}
+
+int Croi::load(int maxReads,bode::NodeGroup *ng) {
   int read_count;
-  std::string fn(filename);
   bode::Interval *read_iv;
-  bode::Reader *rdr = bode::Reader::open(fn,ftype);
 
   read_count = 0;
-  while ((read_iv = rdr->next())) {
+  while (read_count < maxReads && (read_iv = rdr->next())) {
     if (read_iv->isMapped()) {
-      if (insertLength > 0) {
-        read_iv->extend(insertLength);
+      if (iLength > 0) {
+        read_iv->extend(iLength);
       }
-      isets->insert(read_iv);
+      isets->insert(read_iv,ng);
       read_count++;
     }
     if (read_count % 10000 == 0) {
       R_CheckUserInterrupt();
     }
+//    ng->clear();
   }
-  rdr->close();
-
-  delete rdr;
   return read_count;
+}
+
+void Croi::close(void) {
+  rdr->close();
+  delete rdr;
 }
 
 Croi::~Croi(void) {
   delete iv;
   delete isets;
+}
+
+void Croi::clearCounts(void) {
+  isets->clear();
 }
 
 int Croi::count(const char *chrom,int left,int right,int withoutDupes) {
