@@ -1,6 +1,8 @@
 #ifndef __CROI_H
 #define __CROI_H
 
+#include "reader.h"
+#include "nodeGroup.h"
 #include "interval.h"
 #include "intervalSet.h"
 
@@ -8,12 +10,17 @@ class Croi {
   public:
     Croi(void);
     ~Croi(void);
-    int load(const char *filename,int insertLength,int filetype);
+    void open(const char *filename,int insertLength,int filetype);
+    int load(int maxReads,bode::NodeGroup *ng);
+    void close(void);
     int count(const char *chrom,int left,int right,int withoutDupes);
-    int size();
+    int size(void);
+    void clearCounts(void);
   private:
     bode::IntervalSet *isets;
     bode::Interval *iv;
+    bode::Reader *rdr;
+    int iLength;
 };
 
 #endif
